# Regime-Detection

./: .gitignore  README.md  main.py  pyproject.toml  regime_prompt.md
src/: backtest.py  data_loader.py  evaluation.py  exhibits.py  paper_writer.py  similarity.py  transforms.py
