[project]
name = "regime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fredapi>=0.5.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pandas-datareader==0.10.0",
    "reportlab>=4.4.10",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
    "statsmodels>=0.14.6",
    "yfinance>=1.2.1",
]
